[package]
name = "bandcamper"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bench_scraper = { version = "0.1.1", features = ["reqwest"] }
clap = { version = "4.0.22", features = ["derive"] }
json_dotpath = "1.1.0"
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking", "cookies", "gzip", "json", "stream"] }
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
zip = "0.6.3"

[dev-dependencies]
serde_test = "1.0.147"
